--- a/src/pages/ProductPage/ProductPage.css
+++ b/src/pages/ProductPage/ProductPage.css
@@ -15,6 +15,27 @@
     display: flex;
 }
 
+.item-name {
+    font-size: 1.2vw;
+    font-weight: bold;
+    text-align: left;
+    width: 50vw;
+    align-self: flex-end;
+}
+
+.item-price {
+    font-size: 1.2vw;
+    font-weight: bold;
+    width: 20vw;
+    text-align: right;
+    align-self: center;
+}
+
+.item-description {
+    font-size: 1vw;
+    text-align: left;
+}
+
 @media (max-width: 1080px) {
     .item-main-div { width: 70vw; }
     .item-name { font-size: 2vw; width: 50vw; }
